--- a/siteWeb/historique.html
+++ b/siteWeb/historique.html
@@ -46,28 +46,28 @@
     <!--===============================================================================================-->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4 row">
         <div class="container col-12">
-            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Ivaco Loisirs</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item px-lg-2">
-                        <a class="nav-link text-uppercase text-expanded " href="index.php">Ech&eacute;anci&eacute;</a>
-                    </li>
-                    <li class="nav-item px-lg-2">
-                        <a class="nav-link text-uppercase text-expanded current" href="nouvelles.php">Liste de Client</a>
-                    </li>
-                    <li class="nav-item px-lg-2">
-                        <a class="nav-link text-uppercase text-expanded" href="achats.php">Historique</a>
-                        <span class="sr-only">(current)</span>
-                    </li>
-
-                </ul>
-            </div>
+          <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Ivaco Loisirs</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item px-lg-2">
+                <a class="nav-link text-uppercase text-expanded" href="echeancier.html">Échéancier
+                </a>
+              </li>
+              <li class="nav-item px-lg-2">
+                <a class="nav-link text-uppercase text-expanded" href="listeClient.php">Liste de Clients</a>
+              </li>
+              <li class="nav-item px-lg-2">
+                <a class="nav-link text-uppercase text-expanded" href="">Historique</a>
+                <span class="sr-only">(current)</span>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
     <!--===============================================================================================-->
 
     <!-- CSS pour la page -->
