--- a/siteWeb/login.html
+++ b/siteWeb/login.html
@@ -69,7 +69,7 @@
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-login100">
-          <form id="login" class="login100-form validate-form" onsubmit="connexion()" method="POST">
+          <form id="login" class="login100-form validate-form" onsubmit="window.location.href = 'echeancier.html'; return false;" method="POST">
             <span class="login100-form-logo" style="background-image: URL(img/committee3.png)">
             </span>
 
