--- a/siteWeb/echeancier.html
+++ b/siteWeb/echeancier.html
@@ -51,14 +51,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item px-lg-2">
-            <a class="nav-link text-uppercase text-expanded" href="index.php">Échéancier
+            <a class="nav-link text-uppercase text-expanded" href="">Échéancier
             </a>
           </li>
           <li class="nav-item px-lg-2">
-            <a class="nav-link text-uppercase text-expanded" href="nouvelles.php">Liste de Clients</a>
+            <a class="nav-link text-uppercase text-expanded" href="listeClient.php">Liste de Clients</a>
           </li>
           <li class="nav-item px-lg-2">
-            <a class="nav-link text-uppercase text-expanded" href="achats.php">Historique</a>
+            <a class="nav-link text-uppercase text-expanded" href="historique.html">Historique</a>
             <span class="sr-only">(current)</span>
           </li>
         </ul>
