--- a/siteWeb/historique.html
+++ b/siteWeb/historique.html
@@ -54,11 +54,11 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item px-lg-2">
-                <a class="nav-link text-uppercase text-expanded" href="echeancier.html">Échéancier
+                <a class="nav-link text-uppercase text-expanded" href="echeancier">Échéancier
                 </a>
               </li>
               <li class="nav-item px-lg-2">
-                <a class="nav-link text-uppercase text-expanded" href="listeClient.php">Liste de Clients</a>
+                <a class="nav-link text-uppercase text-expanded" href="listeClient">Liste de Clients</a>
               </li>
               <li class="nav-item px-lg-2">
                 <a class="nav-link text-uppercase text-expanded" href="">Historique</a>
