--- a/siteWeb/echeancier.html
+++ b/siteWeb/echeancier.html
@@ -24,13 +24,8 @@
   <!--===============================================================================================-->
   <!-- Custom styles for this template -->
   <!--===============================================================================================-->
-<<<<<<< HEAD
   <link href="/css/business-casual.css" rel="stylesheet">
   <link rel="icon" href="/img/committee.png">
-=======
-  <link href=" /css/business-casual.css" rel="stylesheet">
-  <link rel="icon" href=" /img/committee.png">
->>>>>>> 323d31d87ce5ccdacd0b069722d87975536d061d
   <!--===============================================================================================-->
 
 </head>
@@ -60,10 +55,10 @@
             </a>
           </li>
           <li class="nav-item px-lg-2">
-            <a class="nav-link text-uppercase text-expanded" href="listeClient.php">Liste de Clients</a>
+            <a class="nav-link text-uppercase text-expanded" href="listeClient">Liste de Clients</a>
           </li>
           <li class="nav-item px-lg-2">
-            <a class="nav-link text-uppercase text-expanded" href="historique.html">Historique</a>
+            <a class="nav-link text-uppercase text-expanded" href="historique">Historique</a>
             <span class="sr-only">(current)</span>
           </li>
         </ul>
@@ -74,7 +69,6 @@
 
   <!-- CSS pour la page -->
   <!--===============================================================================================-->
-<<<<<<< HEAD
   <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
   <!--===============================================================================================-->
   <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -93,26 +87,6 @@
   <!--===============================================================================================-->
   <link rel="stylesheet" type="text/css" href="/css/util.css">
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-=======
-  <link rel="stylesheet" type="text/css" href=" /vendor/bootstrap/css/bootstrap.min.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /fonts/iconic/css/material-design-iconic-font.min.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /vendor/animate/animate.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /vendor/css-hamburgers/hamburgers.min.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /vendor/animsition/css/animsition.min.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /vendor/select2/select2.min.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /vendor/daterangepicker/daterangepicker.css">
-  <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href=" /css/util.css">
-  <link rel="stylesheet" type="text/css" href=" /css/main.css">
->>>>>>> 323d31d87ce5ccdacd0b069722d87975536d061d
   <!--===============================================================================================-->
 
   <!-- Container contenant le login form -->
@@ -212,7 +186,6 @@
   <!-- Javascript -->
   <!--===============================================================================================-->
   <!--===============================================================================================-->
-<<<<<<< HEAD
   <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
   <!--===============================================================================================-->
   <script src="/vendor/animsition/js/animsition.min.js"></script>
@@ -228,23 +201,6 @@
   <script src="/vendor/countdowntime/countdowntime.js"></script>
   <!--===============================================================================================-->
   <script src="/js/main.js"></script>
-=======
-  <script src=" /vendor/jquery/jquery-3.2.1.min.js"></script>
-  <!--===============================================================================================-->
-  <script src=" /vendor/animsition/js/animsition.min.js"></script>
-  <!--===============================================================================================-->
-  <script src=" /vendor/bootstrap/js/popper.js"></script>
-  <script src=" /vendor/bootstrap/js/bootstrap.min.js"></script>
-  <!--===============================================================================================-->
-  <script src=" /vendor/select2/select2.min.js"></script>
-  <!--===============================================================================================-->
-  <script src=" /vendor/daterangepicker/moment.min.js"></script>
-  <script src=" /vendor/daterangepicker/daterangepicker.js"></script>
-  <!--===============================================================================================-->
-  <script src=" /vendor/countdowntime/countdowntime.js"></script>
-  <!--===============================================================================================-->
-  <script src=" /js/main.js"></script>
->>>>>>> 323d31d87ce5ccdacd0b069722d87975536d061d
   <!--===============================================================================================-->
 
   <!-- Footer -->
@@ -258,15 +214,9 @@
 
   <!-- Bootstrap core JavaScript -->
   <!--===============================================================================================-->
-<<<<<<< HEAD
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/popper/popper.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-=======
-  <script src=" /vendor/jquery/jquery.min.js"></script>
-  <script src=" /vendor/popper/popper.min.js"></script>
-  <script src=" /vendor/bootstrap/js/bootstrap.min.js"></script>
->>>>>>> 323d31d87ce5ccdacd0b069722d87975536d061d
   <!--===============================================================================================-->
 
 </body>
