--- a/siteWeb/listeClient.html
+++ b/siteWeb/listeClient.html
@@ -125,7 +125,7 @@
 					</div>
 
 					<div class="table100-body js-pscroll">
-						<table>
+						<table id = "myTable">
 							<tbody>
 							<tr class="row100 body">
 							<td class="cell100 column1">Erwin</td>
@@ -177,7 +177,7 @@
 					</div>
 			</div>
 			<br>
-			<center><input id="Soumettre" value="Soumettre" class="btn btn-primary" type="submit" /></center>
+			<center><input id="Modifier" value="Modifier" class="btn btn-primary" type="submit" /></center>
         </div>
 	</div>
 	</div>
@@ -193,7 +193,32 @@
     <!-- Javascript -->
     <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 	<script language="JavaScript">
+        var socket = io.connect('http://localhost:8080');
+		var pseudo = 1;
+		socket.emit('getDBClient');
+		socket.on('DataBase', function(rows) {
+		alert("hehehehe")
+        var table = document.getElementById("myTable");
+        for (var i=0; i<rows.length; i++) {
+			var row = table.insertRow(i);
+			var cell1 = row.insertCell(0);
+			var cell2 = row.insertCell(1);
+			var cell3 = row.insertCell(2);
+			var cell4 = row.insertCell(3);
+			var cell5 = row.insertCell(4);
+			console.log(row.fulldata);
+			cell1.innerHTML = rows[i].Nom;
+			cell2.innerHTML =  rows[i].Prenom;
+			cell3.innerHTML =  rows[i].Adresse;
+			cell4.innerHTML =  rows[i].Telephone;
+			
+        }  
+        
+        console.log(rows);
+      });
 		$('.js-pscroll').each(function(){
 			var ps = new PerfectScrollbar(this);
 
@@ -201,6 +226,7 @@
 				ps.update();
 			})
 		});
+		
 		function getinfo($num) {
 			alert($num)
 			document.getElementById("Nom").value = document.getElementById("nom"+parseInt($num)).innerHTML;
@@ -210,6 +236,8 @@
 			}
 		
 	</script>
+	
+    
     <!--===============================================================================================-->
     <script src=" /vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
