--- a/siteWeb/listeClient.html
+++ b/siteWeb/listeClient.html
@@ -48,7 +48,7 @@
 
   <!-- Navigation -->
   <!--===============================================================================================-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4 row">
+  <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
     <div class="container col-12">
       <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Ivaco Loisirs</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
