--- a/siteWeb/echeancier.html
+++ b/siteWeb/echeancier.html
@@ -119,15 +119,11 @@
               <div class="col-lg-2">
                 <label class="text-heading t">Prenom :</label>
                 <label class="text-heading">Nom :</label>
-                <label class="text-heading">Telephone :</label>
-                <label class="text-heading">Adresse :</label>
               </div>
               <!-- Colonne de textField-->
               <div class="col-sm-5">
                 <input type="text" class="form-control" placeholder="Ex: Cédric" id="prenomText">
                 <input type="text" class="form-control" placeholder="Ex: Léveillé" id="nomText">
-                <input type="text" class="form-control" placeholder="Ex: 613-333-4444" id="telephoneText">
-                <input type="text" class="form-control" placeholder="Ex: 123 Rue" id="adresseText">
               </div>
             </div>
           </div>
@@ -144,10 +140,10 @@
               <div class="col-lg-2"></div>
               <!-- Colonne de label-->
               <div class="col-lg-2 ">
-                <label class="text-heading">Poduit 1 :</label>
-                <label class="text-heading">Poduit 2 :</label>
-                <label class="text-heading">Poduit 3 :</label>
-                <label class="text-heading">Date de livaraison :</label>
+                <label class="text-heading">Produit 1 :</label>
+                <label class="text-heading">Produit 2 :</label>
+                <label class="text-heading">Produit 3 :</label>
+                <label class="text-heading">Date de livraison :</label>
               </div>
               <!-- Colonne de textField-->
               <div class="col-lg-5">
